fixed scrolling issue on homescreen, overflow: hidden was in the wrong place

--- a/Mood-Tracker/src/routes/styles.css
+++ b/Mood-Tracker/src/routes/styles.css
@@ -12,10 +12,6 @@
     margin-bottom: 2rem;
 }
 
-body {
-    overflow: hidden;
-}
-
 /* Popup Styles */
 .popup-overlay {
     position: fixed;
